# torrio

./: .gitignore  .travis.yml  README.md  pyproject.toml
tests/: test_bencode.py  test_download_state.py
torrio/: __init__.py  __main__.py  bencode.py  client.py  client_info.py  download_state.py  peer.py  saver.py  torrent.py  tracker.py  utils.py
