[tool.poetry]
name = "torrio"
version = "0.1.0"
description = ""
authors = ["Arseniy Shamuratov <arsshamuratov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
bitarray = "^2.1.3"
uvloop = "^0.15.3"
tqdm = "^4.62.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
mypy = "^0.812"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
